# text_indexer_app

./: .gitignore  .prettierignore  README.md  README_DRAFT.md  main.py  pyproject.toml
client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/scripts/: dev.mjs
client/src/: main.tsx
client/src/components/: root-component.tsx  routes.tsx
client/src/components/pages/: home.tsx
client/src/components/ui/: button.tsx  checkbox.tsx  combobox.tsx
client/src/components/widgets/: api.ts  dashboard-widgets.tsx  document-list-widget.tsx  document-qa-widget.tsx  document-upload-widget.tsx
fastapi_indexer_app/: __init__.py  db.py  main.py  schemas.py
fastapi_indexer_app/routers/: documents.py
fastapi_indexer_app/services/: documents_service.py  ingestion.py  question_jobs_service.py
get_answer/: __init__.py  api.py  ask.py  config.py  formatter.py  generator.py  main.py  pdf_export.py  pipeline.py  prompts.py  retrieval.py  sample_data.py
set_documents/: __init__.py  chunking.py  config.py  indexer.py  main.py  reader.py
