[project]
name = "test-get-answer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "markitdown[pdf]>=0.1.5",
    "reportlab>=4.4.10",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
